syntax = "proto3";

package telemetry.service.hubrouter;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "telemetry/messages/hub_event.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.hubrouter";
option java_outer_classname = "HubRouterControllerProto";

message DeviceActionRequest {
  string hub_id = 1;
  string scenario_name = 2;
  telemetry.message.event.DeviceActionProto action = 3;
  google.protobuf.Timestamp timestamp = 4;
}

service HubRouterController {
  rpc handleDeviceAction(DeviceActionRequest)
      returns (google.protobuf.Empty);
}